[gd_scene load_steps=4 format=3 uid="uid://6wnwtk20fiws"]

[ext_resource type="Theme" uid="uid://bcvbmn2ycoc47" path="res://Menu/shop/shop.tres" id="1_j645m"]
[ext_resource type="Script" path="res://Menu/shop/shop_button.gd" id="1_o1yh0"]
[ext_resource type="FontFile" uid="uid://ddwxwtqogbx83" path="res://font/Zaychik-Regular.ttf" id="2_7k1ny"]

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(250, 300)
offset_right = 256.0
offset_bottom = 320.0
script = ExtResource("1_o1yh0")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2
theme = ExtResource("1_j645m")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_7k1ny")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 3

[node name="DescriptionLabel" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_7k1ny")
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.854902, 0.698039, 0.254902, 1)
theme_override_colors/font_shadow_color = Color(0.152352, 0.152317, 3.60981e-08, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("2_7k1ny")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
